# sillymarket

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  DEVNET_SETUP.md  README.txt  SANITIZATION_NOTES.txt  SECURITY.md  replit.md
attached_assets/: Pasted--allow-unexpected-cfgs-allow-deprecated-use-anchor-lang-prelude-use-anchor-spl--1761335136338_1761335136338.txt  deepseek_rust_20251025_51dae7_1761391455708.rs
frontends/yesno-ui/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontends/yesno-ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  providers.tsx:
frontends/yesno-ui/src/components/: AdminPanel.tsx  Header.tsx  MarketList.tsx  MintBadge.tsx  Providers.tsx  ShareModal.tsx  SiteHeader.tsx  SweepAllButton.tsx  WalletProviders.tsx
frontends/yesno-ui/src/hooks/: useMarketSnapshot.ts  useUserMarketSnapshot.ts
frontends/yesno-ui/src/idl/: yesno_bets.json
frontends/yesno-ui/src/lib/: anchor-errors.ts  anchor.ts  (+12 more)
programs/yesno_bets/: .gitignore  .npmrc  Anchor.toml  Cargo.toml  env.sh  package.json  tsconfig.json
programs/yesno_bets/idl/: yesno_bets.json
programs/yesno_bets/programs/yesno_bets/: Cargo.toml
programs/yesno_bets/programs/yesno_bets/src/: lib.rs
programs/yesno_bets/scripts/: claim_winnings_adaptive.js  claim_winnings_raw.js  create_market_quick2.js  example_claim_winnings.js  example_create_market.js  helpers.sh  list_markets.js  list_positions.js  place_bet_quick2.js  resolve_market_quick.js  show_cutoff.js  sweep_fees_quick.js  view_market_position.js  view_market_raw.backup.js
(+28 files in other folders)
