[package]
name = "yesno_bets"
version = "0.1.0"
edition = "2021"

[lib]
name = "yesno_bets"
crate-type = ["cdylib"]

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "=0.31.1", features = ["token", "associated_token"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
