[package]
name = "yesno_bets"
version = "0.1.0"
description = "Solana Yes/No Betting Program"
edition = "2021"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "yesno_bets"
